--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /public/hot
 /public/storage
 /storage/*.key
-/storage/files
-/storage/foto
+/storage/files/*
+!/storage/files/.gitkeep
+/storage/foto/*
+!/storage/foto/.gitkeep
 /vendor
 .env
 .env.backup
